--- a/app/src/main/res/layout/fragment_scout_teleop.xml
+++ b/app/src/main/res/layout/fragment_scout_teleop.xml
@@ -23,7 +23,7 @@
         android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp">
+        android:layout_marginTop="150dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -52,6 +52,7 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="50dp"
 
@@ -94,6 +95,7 @@
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
         android:layout_alignParentEnd="true"
         >
         <TextView
