--- a/app/src/main/res/layout/fragment_scout_teleop.xml
+++ b/app/src/main/res/layout/fragment_scout_teleop.xml
@@ -115,7 +115,7 @@
             android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
-            app:key="tele_speaker_counter"
+            app:key="tele_made_speaker"
             />
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
             android:id="@+id/Speaker_Missed"
@@ -155,7 +155,7 @@
             android:layout_marginTop="10dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
-            app:key="tele_speaker_counter"
+            app:key="trap_counter"
             />
 
     </LinearLayout>
