--- a/app/src/main/res/layout/fragment_summaries_info.xml
+++ b/app/src/main/res/layout/fragment_summaries_info.xml
@@ -117,11 +117,6 @@
                         android:textSize="20sp"
                         app:text="&lt;b>Drivetrain:&lt;/b> {{drivetrain}}" />
 
-                    <org.wildstang.wildrank.androidv2.views.TemplatedTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        app:text="&lt;b>Scoring Mechanism:&lt;/b> {{cargo_scorer}}" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -129,31 +124,21 @@
                         android:text="Autonomous"
                         android:textSize="25sp" />
 
-                    <org.wildstang.wildrank.androidv2.views.TemplatedTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        app:text="&lt;b>Starting location:&lt;/b> {{auto_location}}" />
 
                     <org.wildstang.wildrank.androidv2.views.TemplatedTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
                         app:falseString="no"
-                        app:text="&lt;b>Drives during auto:&lt;/b> {{auto_drives}}"
-                        app:trueString="yes" />
+                        app:text="&lt;b>Crosses line:&lt;/b> {{auto_drives}}"
+                        app:trueString="True" />
 
                     <org.wildstang.wildrank.androidv2.views.TemplatedTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
-                        app:text="&lt;b>Upper Hub Auto Shots:&lt;/b> {{auto_shots_high}}" />
+                        app:text="&lt;b>Auto Max:&lt;/b> {{auto_max}}" />
 
-                    <org.wildstang.wildrank.androidv2.views.TemplatedTextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        app:text="&lt;b>Lower Hub Auto Shots:&lt;/b> {{auto_shots_low}}" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -165,13 +150,24 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
-                        app:text="&lt;b>Preferred Climb Height:&lt;/b> {{climb_height}}" />
+                        app:text="&lt;b>Endgame Climb:&lt;/b> {{end_game_cap}}" />
 
                     <org.wildstang.wildrank.androidv2.views.TemplatedTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
-                        app:text="&lt;b>Time for Preferred Height:&lt;/b> {{climb_time}}" />
+                        app:falseString="no"
+                        app:text="&lt;b>External Intake:&lt;/b> {{external_intake}}"
+                        app:trueString="True" />
+
+
+                    <org.wildstang.wildrank.androidv2.views.TemplatedTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20sp"
+                        app:falseString="no"
+                        app:text="&lt;b>Retractable Intake:&lt;/b> {{retract_intake}}"
+                        app:trueString="True" />
 
                     <TextView
                         android:layout_width="wrap_content"
