--- a/app/src/main/res/layout/fragment_scout_post_match.xml
+++ b/app/src/main/res/layout/fragment_scout_post_match.xml
@@ -45,7 +45,17 @@
         android:layout_marginLeft="20dp"
         />
 
-
+    <org.wildstang.wildrank.androidv2.views.scouting.ScoutingSpinnerView
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
+        app:key="HighNotes"
+        app:label="High Notes:"
+        app:values="@array/high_notes"
+        android:layout_above="@+id/notes"
+        android:layout_marginBottom="25dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        />
 
     <Button
             android:id="@+id/finish"
